syntax = "proto3";

option go_package = "github.com/streamnative/oxia/proto";

package proto;



service InternalAPI {
  rpc UpdateStatus(ClusterStatus) returns (InternalEmpty) {}

  /**
   * Used by followers to attach to the leader. This is a bi-directional stream:
   *  - Leader will send log entries to the follower
   *  - Follower send a stream of updates with the last entry persisted
   */
}

message InternalEmpty {
}

message ReadLogRequest {
  uint32 shard = 1;
  uint64 first_entry_id = 2;
} 

message ConfirmedEntryRequest {
  uint32 shard = 1;
  string follower = 2;
  uint64 epoch = 3;
  uint64 entryId = 4;
}


message ClusterStatus {
  repeated ShardStatus shards_status = 1;

  uint32 replication_factor = 2;
}

message ShardStatus {
  uint32 shard = 1;
//  ServerAddress leader = 2;
//  repeated ServerAddress followers = 3;

  repeated EpochStatus epochs = 4;
}

message EpochStatus {
  uint64 epoch = 1;
  uint64 first_entry = 2;
}
